--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,7 +4,10 @@
 
 #me {
   position: relative;
-  top: 96px; }
+  top: 96px;
+  background-repeat: no-repeat;
+  background-image: url("../images/common/yellow_line.svg"), url("../images/common/orange_bg.svg"), url("../images/common/yellow_line.svg"), url("../images/aboutme/bluesky_bg.svg");
+  background-position: 1090px 250px,1570px 422px,1474px 1057px,150px 1168px; }
   #me .bg img {
     -webkit-animation: rotate 60s linear infinite;
     -moz-animation: rotate 60s linear infinite;
@@ -149,6 +152,14 @@
     right: 0;
     top: 310px;
     line-height: 32px; }
+    #me .text::before {
+      content: "";
+      position: absolute;
+      background: url("../images/common/color_dot.svg") no-repeat;
+      width: 25px;
+      height: 520px;
+      left: -51px;
+      bottom: -35%; }
     #me .text p {
       position: relative;
       font-size: 22px; }
@@ -462,8 +473,9 @@
     margin-top: 20px; }
 
 #projectCnt {
-  position: relative;
-  height: 2040px; }
+  position: relative; }
+  #projectCnt.p_cnt {
+    height: 2040px; }
   #projectCnt .tit {
     font-family: NtSnasKR;
     font-size: 36px; }
@@ -867,8 +879,6 @@
 
 #what_info, #what_info .color > strong, #what_info .color > p, #what_info .font > strong, #what_info .font > p, #what_info .left .f_name, #what_info .right .f_name {
   color: #ffffff; }
-#what_info .w1400 {
-  border: 1px solid gold; }
 #what_info .tit {
   margin-bottom: 60px; }
 #what_info .subtit + p {
@@ -914,10 +924,12 @@
   margin: 220px 0 650px; }
   #what_info .coding .flex p {
     text-align: left; }
+  #what_info .coding .circle {
+    top: 60px; }
 #what_info .sitego {
   bottom: 200px; }
 
-#kids, #kids_info {
+#kids {
   background: #0252A6; }
 
 #kids {
@@ -932,6 +944,200 @@
     #kids .img_wrap .img {
       width: 718px;
       height: 449px; }
+
+#kids_info .cnt1 {
+  margin-top: 50px; }
+  #kids_info .cnt1 li {
+    float: left;
+    width: 450px;
+    height: 281px; }
+    #kids_info .cnt1 li + li {
+      margin-left: 25px; }
+  #kids_info .cnt1 .subtit {
+    margin: 45px 0 30px; }
+#kids_info .feature .subtit {
+  margin: 120px 0 40px; }
+#kids_info .feature ul {
+  width: 1028px;
+  margin: 0 auto; }
+#kids_info .feature li {
+  float: left;
+  width: 182px; }
+  #kids_info .feature li + li {
+    margin-left: 100px; }
+  #kids_info .feature li img {
+    display: inline-block;
+    height: 182px; }
+  #kids_info .feature li p {
+    text-align: center;
+    line-height: 27px;
+    margin-top: 18px; }
+#kids_info .flow .subtit {
+  margin: 160px 0 50px; }
+#kids_info .flow div {
+  text-align: center; }
+#kids_info .design .subtit {
+  margin: 160px 0 70px; }
+#kids_info .design > div {
+  float: left; }
+#kids_info .design .color > strong, #kids_info .design .color > p:nth-child(2), #kids_info .design .font > strong, #kids_info .design .font > p {
+  display: inline-block; }
+#kids_info .design .color > strong::after, #kids_info .design .font > strong::after {
+  -webkit-transform: translateX(50%);
+  -moz-transform: translateX(50%);
+  -o-transform: translateX(50%);
+  -ms-transform: translateX(50%);
+  transform: translateX(50%);
+  -webkit-transform: translateY(-50%);
+  -moz-transform: translateY(-50%);
+  -o-transform: translateY(-50%);
+  -ms-transform: translateY(-50%);
+  transform: translateY(-50%);
+  top: 50%;
+  bottom: 0;
+  left: 66px;
+  width: 100px; }
+#kids_info .design .color > p:nth-child(2), #kids_info .design .font > p {
+  margin: 0;
+  margin-left: 135px; }
+#kids_info .design .color > p:nth-child(3), #kids_info .design .color > p:nth-child(5) {
+  margin: 45px 0 15px; }
+#kids_info .design .color {
+  text-align: left;
+  width: 580px; }
+  #kids_info .design .color .main {
+    width: 335px; }
+    #kids_info .design .color .main li:nth-child(1) {
+      background: #FFAF45;
+      color: #bf6e02; }
+    #kids_info .design .color .main li:nth-child(2) {
+      background: #2fbcd1;
+      color: #006473; }
+  #kids_info .design .color .sub {
+    height: 130px;
+    width: 580px; }
+    #kids_info .design .color .sub li {
+      width: 130px;
+      height: 130px;
+      font-size: 23px;
+      line-height: 130px; }
+      #kids_info .design .color .sub li + li {
+        margin-left: 20px; }
+      #kids_info .design .color .sub li:nth-child(1) {
+        background: #64b742;
+        color: #237A00; }
+      #kids_info .design .color .sub li:nth-child(2) {
+        background: #f6c337;
+        color: #907100; }
+      #kids_info .design .color .sub li:nth-child(3) {
+        background: #ea461f;
+        color: #7A1700; }
+      #kids_info .design .color .sub li:nth-child(4) {
+        background: #bc662b;
+        color: #532B00; }
+#kids_info .design .font {
+  width: 757px;
+  margin: 106px 0 0 63px; }
+  #kids_info .design .font .left, #kids_info .design .font .right {
+    padding: 0;
+    text-align: center; }
+  #kids_info .design .font .left .big, #kids_info .design .font .left .small {
+    font-family: jalnan; }
+  #kids_info .design .font .left .big {
+    color: #FFBA1F; }
+  #kids_info .design .font .left .small {
+    color: #FFCB64; }
+  #kids_info .design .font .right .big, #kids_info .design .font .right .small {
+    font-family: NtSansKR; }
+  #kids_info .design .font .right .big {
+    color: #C46311; }
+  #kids_info .design .font .right .small {
+    color: #DF8340; }
+#kids_info .parish .subtit {
+  margin: 159px 0 80px; }
+#kids_info .parish > div.one, #kids_info .parish > div.two {
+  -webkit-display: flex;
+  -moz-display: flex;
+  -ms-display: flex;
+  display: flex;
+  justify-content: space-between; }
+#kids_info .parish > div p {
+  line-height: 2;
+  font-size: 22px; }
+#kids_info .parish > div.three, #kids_info .parish > div.four, #kids_info .parish > div .img_wrap {
+  position: relative; }
+#kids_info .parish > div img {
+  position: absolute; }
+#kids_info .parish .one {
+  height: 516px; }
+  #kids_info .parish .one .txt {
+    position: static; }
+    #kids_info .parish .one .txt p {
+      text-align: left; }
+    #kids_info .parish .one .txt p:nth-child(2) {
+      margin: 156px 0 51px; }
+  #kids_info .parish .one .img_wrap img:nth-child(1) {
+    top: 0;
+    left: 0; }
+  #kids_info .parish .one .img_wrap img:nth-child(2) {
+    bottom: 0;
+    right: 0; }
+#kids_info .parish .two {
+  margin: 156px 0 100px;
+  height: 356px; }
+  #kids_info .parish .two p {
+    display: inline-block;
+    margin-top: 122px; }
+  #kids_info .parish .two .img_wrap {
+    height: 100%; }
+    #kids_info .parish .two .img_wrap img:nth-child(1) {
+      top: 0;
+      left: 0; }
+    #kids_info .parish .two .img_wrap img:nth-child(2) {
+      top: 43px;
+      right: 0; }
+    #kids_info .parish .two .img_wrap img:nth-child(3) {
+      bottom: 43px;
+      left: 0; }
+    #kids_info .parish .two .img_wrap img:nth-child(4) {
+      bottom: 0;
+      right: 0; }
+#kids_info .parish .three {
+  height: 515px;
+  margin-bottom: 253px; }
+  #kids_info .parish .three p {
+    position: absolute;
+    top: 199px;
+    right: 95px;
+    width: 415px; }
+  #kids_info .parish .three .img_wrap {
+    height: 100%; }
+    #kids_info .parish .three .img_wrap img:nth-child(1) {
+      top: 0;
+      left: 0; }
+    #kids_info .parish .three .img_wrap img:nth-child(2) {
+      -webkit-transform: translate(-50%, -50%);
+      -moz-transform: translate(-50%, -50%);
+      -o-transform: translate(-50%, -50%);
+      -ms-transform: translate(-50%, -50%);
+      transform: translate(-50%, -50%);
+      top: 50%;
+      left: 50%; }
+    #kids_info .parish .three .img_wrap img:nth-child(3) {
+      bottom: 0;
+      right: 0; }
+#kids_info .parish .four {
+  text-align: center;
+  height: 345px; }
+  #kids_info .parish .four strong {
+    display: inline-block;
+    margin-top: 101px; }
+  #kids_info .parish .four a {
+    bottom: 0;
+    padding-left: 0;
+    padding-top: 18px; }
+  #kids_info .parish .four img {
+    left: 943px; }
 
 @-webkit-keyframes rotate {
   100% {
