--- a/assets/css/common.css
+++ b/assets/css/common.css
@@ -23,7 +23,7 @@ img {
 
 button {
   background: none;
-  cursor: url("../images/icon/pointer.svg"), pointer !important;
+  cursor: pointer;
   font-family: inherit; }
 
 header, nav, section, article, footer {
@@ -114,11 +114,11 @@ body {
     -webkit-background-size: cover !important;
     -moz-background-size: cover !important;
     background-size: cover !important;
-    top: 18px;
-    right: 80px;
+    top: 16px;
+    right: 82px;
     background: url("../images/icon/nav.svg") no-repeat center;
-    width: 60px;
-    height: 60px; }
+    width: 70px;
+    height: 70px; }
   #header .email {
     -webkit-transform: rotate(90deg);
     -moz-transform: rotate(90deg);
@@ -145,13 +145,26 @@ body {
     width: 695px;
     height: 613px; }
   .gnb li a {
+    position: relative;
     color: #ffffff;
     font-family: NtSansKR;
     font-weight: 700;
     font-size: 100px;
     width: 100%; }
-    .gnb li a:hover, .gnb li a:focus {
-      text-decoration: underline; }
+    .gnb li a::after {
+      -webkit-transition: width 0.3s ease 0s, left 0.3s ease 0s;
+      -moz-transition: width 0.3s ease 0s, left 0.3s ease 0s;
+      -o-transition: width 0.3s ease 0s, left 0.3s ease 0s;
+      content: "";
+      position: absolute;
+      left: 50%;
+      bottom: 0;
+      height: 10px;
+      width: 0;
+      background: #ffffff; }
+    .gnb li a:hover::after, .gnb li a:focus::after {
+      width: 100%;
+      left: 0; }
 
 #gnb {
   display: none;
